# bcg-interview

./: .gitignore  FRONTEND_EXPLAINED.md  INTERVIEW_PREP.md  README.md
backend/: api.http  manage.py  pyproject.toml
backend/pricing/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/pricing/management/commands/: seed_products.py
backend/pricing/migrations/: 0001_initial.py  0002_role_alter_product_options_alter_product_category_and_more.py  0003_alter_product_category_alter_product_name_and_more.py  0004_add_validators_defaults.py
backend/root/: asgi.py  settings.py  urls.py  wsgi.py
backend/root/settings/: base.py  dev.py  prod.py
data/: ~$e Test Checklist.docx
data-md/: Extracted_Content_From_All_Files.md  hii.md  project_overview.md.resolved
docs/: CACHING_AND_DESIGN.md  FORMULA_DOCUMENTATION.md  FORMULA_SIMPLIFIED.md  FRONTEND_EXPLAINED.md  INTERVIEW_PREP.md  append_backend_qs.py  append_frontend_qs.py  backend_documentation.md  frontend_documentation.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AddProductModal.jsx  DemandForecastModal.jsx  DemandForecastPopup.jsx  LandingPage.jsx  Layout.jsx  LoginPage.jsx  ProductDetailsModal.jsx  ProductTable.jsx  TablePagination.jsx
frontend/src/hooks/: useProductSelection.js  useProducts.js
frontend/src/pages/: OptimizationPage.jsx  ProductsPage.jsx
frontend/src/services/: api.js  authService.js  productService.js
frontend/src/utils/: chartConfig.js  pricing.js
(+7 files in other folders)
